--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       "value": ""
     },
     "SESSION_ID": {
-      "description": "your session id",
+      "description": "LEh3jLpA#9jqS4YQZgrX0hQpKgPrXe4WwsAcI3w6RYdZeA6ygk_I",
       "required": true,
       "value": ""
     },
